--- a/mrVision/src/mrVision/gui/mainGUI.ui
+++ b/mrVision/src/mrVision/gui/mainGUI.ui
@@ -1137,6 +1137,32 @@
                <string>Circles threshold</string>
               </property>
              </widget>
+             <widget class="QPushButton" name="cmdSaveTransformation">
+              <property name="geometry">
+               <rect>
+                <x>110</x>
+                <y>400</y>
+                <width>87</width>
+                <height>27</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>Save</string>
+              </property>
+             </widget>
+             <widget class="QPushButton" name="cmdLoadTransformation">
+              <property name="geometry">
+               <rect>
+                <x>110</x>
+                <y>440</y>
+                <width>87</width>
+                <height>27</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>Load</string>
+              </property>
+             </widget>
             </widget>
            </item>
           </layout>
