--- a/mrVision/src/mrVision/gui/mainGUI.ui
+++ b/mrVision/src/mrVision/gui/mainGUI.ui
@@ -1329,7 +1329,7 @@
                      </rect>
                     </property>
                     <property name="text">
-                     <string>0.1</string>
+                     <string>0.01</string>
                     </property>
                     <property name="alignment">
                      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -1361,7 +1361,7 @@
                      </rect>
                     </property>
                     <property name="text">
-                     <string>0.2</string>
+                     <string>0.3</string>
                     </property>
                     <property name="alignment">
                      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -1377,7 +1377,7 @@
                      </rect>
                     </property>
                     <property name="text">
-                     <string>0.15</string>
+                     <string>0.13</string>
                     </property>
                     <property name="alignment">
                      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -1422,7 +1422,7 @@
                      </rect>
                     </property>
                     <property name="text">
-                     <string>13</string>
+                     <string>11</string>
                     </property>
                     <property name="alignment">
                      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -1531,7 +1531,7 @@
                      <number>2</number>
                     </property>
                     <property name="value">
-                     <number>128</number>
+                     <number>85</number>
                     </property>
                     <property name="orientation">
                      <enum>Qt::Horizontal</enum>
@@ -1656,13 +1656,16 @@
                      </rect>
                     </property>
                     <property name="maximum">
-                     <number>10</number>
+                     <number>255</number>
                     </property>
                     <property name="singleStep">
-                     <number>1</number>
+                     <number>5</number>
+                    </property>
+                    <property name="pageStep">
+                     <number>5</number>
                     </property>
                     <property name="value">
-                     <number>3</number>
+                     <number>120</number>
                     </property>
                     <property name="orientation">
                      <enum>Qt::Horizontal</enum>
